fix height of card on mobile

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     display: grid;
     grid-template-columns: 1fr clamp(320px, 40%, 350px) 1fr;
     row-gap: 10vh;
-    grid-template-rows: 0.4fr clamp(360px, 60%, 600px) 0.4fr;
+    grid-template-rows: 0.4fr clamp(360px, 65%, 600px) 0.4fr;
     grid-template-areas:
         '. . .'
         '. card .'
